kustomize/components/ingress/ingress-base.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app
  labels:
    app.kubernetes.io/component: ingress
  annotations:
    kubernetes.io/ingress.class: "<GATEWAY_CLASS_KEY>"
    cert-manager.io/cluster-issuer: "<CERT_ISSUER_KEY>"
spec:
  rules:
    - host: PLACEHOLDER_HOST
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: app
                port:
                  number: 80
  tls:
    - hosts:
        - PLACEHOLDER_HOST
      secretName: app-tls
